manifests/cat-agency/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-agency-frontend
  namespace: cat-agency
  labels:
    app: cat-agency-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cat-agency-frontend
  template:
    metadata:
      labels:
        app: cat-agency-frontend
    spec:
      containers:
      - name: frontend
        image: 601094796564.dkr.ecr.ap-south-1.amazonaws.com/protfolio/app:frontend-v1.0.2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: cat-agency-frontend
  namespace: cat-agency
spec:
  selector:
    app: cat-agency-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
